--- a/html/login-admin.html
+++ b/html/login-admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Admin</title>
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/mixer.css">
     <link rel="stylesheet" href="../assets/css/login.css">
@@ -17,7 +17,7 @@
         <div class="c-login__wrapper u-flex-column">
             <h1 class="c-login__title u-right">Inicie sessão no Virtual Card</h1>
             <!-- Form -->
-            <form action="#" method="post" class="c-form u-flex-column">
+            <form action="#" method="post" class="c-form c-form--gap u-flex-column">
                 <div class="c-form__fields u-flex-column">
                     <!-- Fields -->
                     <div class="c-form__group c-form__group--gap u-flex-between">
@@ -31,8 +31,6 @@
                             maxlength="3">
                     </div>
                 </div>
-                <!-- Signup link -->
-                <a href="#" class="c-form__signup-link u-right">Cria conta</a>
                 <!-- Button submitF -->
                 <button type="submit" class="c-form__btn u-btn u-flex">Inicie sessão</button>
             </form>
