--- a/html/login-admin.html
+++ b/html/login-admin.html
@@ -17,21 +17,21 @@
         <div class="c-login__wrapper u-flex-column">
             <h1 class="c-login__title u-right u-title">Inicie sessão no Virtual Card</h1>
             <!-- Form -->
-            <form action="#" method="post" class="c-form c-form--gap u-flex-column">
-                <div class="c-form__fields u-flex-column">
+            <form action="#" method="post" class="c-form c-form--gap u-flex-column u-width-100">
+                <div class="c-form__fields u-flex-column u-width-100">
                     <!-- Fields -->
-                    <div class="c-form__group c-form__group--gap u-flex-between">
+                    <div class="c-form__group c-form__group--gap u-flex-between u-width-100">
                         <label for="code" class="c-form__label">Código</label>
                         <input type="text" name="code" id="code" class="c-form__input u-input" maxlength="3">
                     </div>
                     <!-- Fields -->
-                    <div class="c-form__group u-flex-between">
+                    <div class="c-form__group u-flex-between u-width-100">
                         <label for="password" class="c-form__label">Palavra-passe</label>
                         <input type="password" name="password" id="password" class="c-form__input u-input"
                             maxlength="3">
                     </div>
                 </div>
-                <!-- Button submitF -->
+                <!-- Button submit -->
                 <button type="submit" class="c-form__btn u-btn u-flex">Inicie sessão</button>
             </form>
         </div>
