--- a/html/login.html
+++ b/html/login.html
@@ -19,12 +19,12 @@
             <!-- Form -->
             <form action="#" method="post" class="c-form u-flex-column u-width-100">
                 <div class="c-form__fields u-flex-column u-width-100">
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group c-form__group--gap u-flex-between u-width-100">
                         <label for="code" class="c-form__label">Código</label>
                         <input type="text" name="code" id="code" class="c-form__input u-input" maxlength="3">
                     </div>
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group u-flex-between u-width-100">
                         <label for="password" class="c-form__label">Palavra-passe</label>
                         <input type="password" name="password" id="password" class="c-form__input u-input"
