--- a/html/register-new-user.html
+++ b/html/register-new-user.html
@@ -18,25 +18,26 @@
             <h1 class="c-register__title u-title">Efectue o Registro do utilizador</h1>
             <!-- Form -->
             <form action="" method="post" class="c-form u-flex-column u-width-100">
+                <!-- Fields -->
                 <div class="c-form__fields u-grid u-width-100">
                     <h2 class="c-form__title">Dados Pessoais</h2>
                     <h2 class="c-form__title">Dados de sessão </h2>
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
                         <label for="username">Nome do utilizador</label>
                         <input type="text" name="username" id="username" class="c-form__input u-width-100">
                     </div>
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
                         <label for="username">Nome do utilizador</label>
                         <input type="text" name="username" id="username" class="c-form__input u-width-100">
                     </div>
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
                         <label for="username">Nome do utilizador</label>
                         <input type="text" name="username" id="username" class="c-form__input u-width-100">
                     </div>
-                    <!-- Fields -->
+                    <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
                         <label for="username">Nome do utilizador</label>
                         <input type="text" name="username" id="username" class="c-form__input u-width-100">
