Formulário de resgisto

--- a/html/login.html
+++ b/html/login.html
@@ -34,7 +34,7 @@
                 <!-- Signup link -->
                 <a href="#" class="c-form__signup-link u-right">Cria conta</a>
                 <!-- Button submit -->
-                <button type="submit" class="c-form__btn u-btn u-flex">Inicie sessão</button>
+                <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex">Inicie sessão</button>
             </form>
         </div>
     </div>
