Actualizar width utilitario

--- a/html/login-admin.html
+++ b/html/login-admin.html
@@ -15,7 +15,7 @@
     <div class="c-login u-flex-center">
         <!-- Login wrapper -->
         <div class="c-login__wrapper u-flex-column">
-            <h1 class="c-login__title u-right u-title">Inicie sessão no Virtual Card</h1>
+            <h1 class="c-login__title u-title u-right u-width-100">Inicie sessão no Virtual Card</h1>
             <!-- Form -->
             <form action="#" method="post" class="c-form c-form--gap u-flex-column u-width-100">
                 <div class="c-form__fields u-flex-column u-width-100">
