--- a/html/register-new-user.html
+++ b/html/register-new-user.html
@@ -25,18 +25,18 @@
                     <h2 class="c-form__title">Dados de sessão </h2>
                     <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
-                        <label for="username" class="c-form__label u-left">Nome do utilizador</label>
+                        <label for="username" class="c-form__label u-left u-width-100">Nome do utilizador</label>
                         <input type="text" name="username" id="username"
                             class="c-form__input u-input u-focus u-width-100">
                     </div>
                     <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
-                        <label for="code" class="c-form__label u-left">Código de acesso</label>
+                        <label for="code" class="c-form__label u-left u-width-100">Código de acesso</label>
                         <input type="text" name="code" id="code" class="c-form__input u-input u-focus u-width-100">
                     </div>
                     <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
-                        <label for="username" class="c-form__label u-left">Perfil</label>
+                        <label for="username" class="c-form__label u-left u-width-100">Perfil</label>
                         <select name="profile" id="profile" class="c-form__select u-input u-focus u-width-100">
                             <option value="">Selecione o Perfil</option>
                             <option value="Administrador">Administrador</option>
@@ -46,7 +46,7 @@
                     </div>
                     <!-- Field group -->
                     <div class="c-form__group u-width-100 u-flex-column">
-                        <label for="username" class="c-form__label u-left">Chave de acesso</label>
+                        <label for="username" class="c-form__label u-left u-width-100">Chave de acesso</label>
                         <input type="text" name="username" id="username"
                             class="c-form__input u-input u-focus u-width-100">
                     </div>
