--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
     <div class="c-login u-flex-center">
         <!-- Login wrapper -->
         <div class="c-login__wrapper u-flex-column">
-            <h1 class="c-login__title u-right u-title">Inicie sessão no Virtual Card</h1>
+            <h1 class="c-login__title u-title u-right u-width-100">Inicie sessão no Virtual Card</h1>
             <!-- Form -->
             <form action="#" method="post" class="c-form u-flex-column u-width-100">
                 <div class="c-form__fields u-flex-column u-width-100">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <!-- Signup link -->
-                <a href="#" class="c-form__signup-link u-right">Cria conta</a>
+                <a href="#" class="c-form__signup-link u-right u-width-100">Cria conta</a>
                 <!-- Button submit -->
                 <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex">Inicie sessão</button>
             </form>
