--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="c-login u-flex-center">
+    <div class="c-login u-fullscreen u-flex-center">
         <!-- Login wrapper -->
         <div class="c-login__wrapper u-flex-column">
             <h1 class="c-login__title u-title u-right u-width-100">Inicie sessão no Virtual Card</h1>
@@ -34,7 +34,7 @@
                 <!-- Signup link -->
                 <a href="#" class="c-form__signup-link u-right u-width-100">Cria conta</a>
                 <!-- Button submit -->
-                <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex">Inicie sessão</button>
+                <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex-center">Inicie sessão</button>
             </form>
         </div>
     </div>
