--- a/html/register-new-user.html
+++ b/html/register-new-user.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="c-register u-flex-center">
+    <div class="c-register u-fullscreen u-flex-center">
         <!-- Login wrapper -->
         <div class="c-register__wrapper u-flex-column">
             <h1 class="c-register__title u-title">Efectue o Registro do utilizador</h1>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <!-- Button submit -->
-                <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex">Registrar</button>
+                <button type="submit" class="c-form__btn u-btn u-btn-primary u-flex-center">Registrar</button>
             </form>
         </div>
     </div>
