Painel do admin cartões

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -73,7 +73,7 @@
     </header>
 
     <main>
-        <div class="main-content">
+        <div class="main-content u-flex-column2">
             <!-- Top content -->
             <section class="top-content u-flex-between">
                 <a href="#" class="top-content__reports u-white">
@@ -84,9 +84,37 @@
                     <p class="user__name">#1 - Chelvy Paulino - Administrador</p>
                 </div>
             </section>
-            <section class="card">
-                <article class="card__wrapper">
-                    
+
+            <!-- Cards -->
+            <section class="card u-flex-center">
+                <!-- Card wrapper -->
+                <article class="card__wrapper u-flex">
+                    <!-- Card header -->
+                    <i class="fa-solid fa-wallet card__icon"></i>
+                    <div class="card__body u-flex-column">
+                        <h1 class="card__title">Vender cartão</h1>
+                        <p class="card__paragraph"> Venda de cartão</p>
+                    </div>
+                </article>
+
+                <!-- Card wrapper -->
+                <article class="card__wrapper u-flex">
+                    <!-- Card header -->
+                    <i class="fa-solid fa-wallet card__icon"></i>
+                    <div class="card__body u-flex-column">
+                        <h1 class="card__title">Carregar cartão</h1>
+                        <p class="card__paragraph">Depósito de saldo em cartão</p>
+                    </div>
+                </article>
+
+                <!-- Card wrapper -->
+                <article class="card__wrapper u-flex">
+                    <!-- Card header -->
+                    <i class="fa-solid fa-users card__icon"></i>
+                    <div class="card__body u-flex-column">
+                        <h1 class="card__title">Vender produto</h1>
+                        <p class="card__paragraph">Adicionar itens no cartão</p>
+                    </div>
                 </article>
             </section>
         </div>
